# WaveShareDisplay

./: .gitignore  CMakeLists.txt  README.md  dwk_build.sh  main_notes.txt
c/examples/: EPD_Test.h  main.c
c/lib/Config/: DEV_Config.c  DEV_Config.h
cpp/: CMakeLists.txt  active_timer.h  bitmap_display_2in9.cpp  bitmap_display_2in9.h  bitmap_display_2in9_null.cpp  bitmap_display_2in9_null.h  bitmap_image.cpp  bitmap_image.h  build.sh  drawing.cpp  drawing.h  i_bitmap_display.h  i_screen.h  i_screen_manager.h  lms_client.cpp  lms_client.h  main.cpp  matrix.h  screen_manager.cpp  screen_manager.h  waveshare_web_service.cpp  waveshare_web_service.h
cpp/impl/: bitmaps.cpp  bitmaps.h  screen_manager.cpp  screen_manager.h  widget_bitmap.cpp  widget_bitmap.h  widget_current_time.cpp  widget_current_time.h  widget_string.cpp  widget_string.h
cpp/impl/screens/: gimp_monkey_image.cpp  gimp_monkey_image.h  screen_bender.cpp  screen_bender.h  screen_circle.cpp  screen_circle.h  screen_currently_playing.cpp  screen_currently_playing.h  screen_diamond.cpp  screen_diamond.h  screen_square.cpp  screen_square.h  screen_widgets.cpp  screen_widgets.h  screen_x.cpp  screen_x.h
cpp/interfaces/: i_bitmap_display.h  i_screen.h  i_screen_manager.h  i_widget.h
cpp/web_service/: lms_client.cpp  lms_client.h  waveshare_web_service.cpp  waveshare_web_service.h  web_service.cpp  web_service.h
scripts/sbpd_json/: out.txt  pause_sh.sh  play_sb.sh  query_sb.sh
